--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,24 @@
-* {
+*{
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
-body {
-    background-color: #f6f8fc;
+body{
+    background-color: #F6F8FC;
 }
 
-.content {
-    width: 100vw;
-    height: 100vh;
+.content{
     padding: 1rem;
     background-color: #fff;
+    height: 100vh;
+    width: 100vw;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
+@media screen and(min-width: 992px){
+    .content{
         max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
+        margin: auto;
+        height: 1rem auto;
         border-radius: 1rem;
     }
 }
